[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Exercise 1 - Loading Programs: pip vs Poetry dependency management"
authors = ["Neo <neo@zion.io>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
